--- a/app/src/main/res/layout/fragment_all_requests.xml
+++ b/app/src/main/res/layout/fragment_all_requests.xml
@@ -30,14 +30,14 @@
         android:layout_marginTop="10dp">
 
 
-        <EditText
+        <com.mindorks.editdrawabletext.EditDrawableText
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@+id/filter_btn"
             android:background="@drawable/et_gray"
-            android:drawableEnd="@drawable/ic_search"
+            android:drawableRight="@drawable/ic_search"
             android:drawableTint="@color/black"
             android:hint="@string/type_to_search"
             android:imeOptions="actionSearch"
