--- a/app/src/main/res/layout/activity_job_orders.xml
+++ b/app/src/main/res/layout/activity_job_orders.xml
@@ -47,20 +47,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
 
-            <EditText
+            <com.mindorks.editdrawabletext.EditDrawableText
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/filter_btn"
                 android:background="@drawable/et_gray"
-                android:drawableEnd="@drawable/ic_search"
+                android:drawableRight="@drawable/ic_search"
                 android:drawableTint="@color/black"
                 android:hint="@string/type_to_search"
                 android:imeOptions="actionSearch"
                 android:importantForAutofill="no"
                 android:inputType="text"
-                android:padding="8dp" />
+                android:padding="8dp"
+                tools:ignore="RtlHardcoded" />
 
             <ImageView
                 android:id="@+id/filter_btn"
@@ -106,10 +107,4 @@
         app:srcCompat="@drawable/ic_add"
         app:tint="@color/white" />
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center" />
 </RelativeLayout>
