--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,18 +18,19 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
-
-    <com.makeramen.roundedimageview.RoundedImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:adjustViewBounds="true"
+        android:padding="5dp"
         android:scaleType="centerCrop"
         android:src="@drawable/pp_default"
-        app:riv_border_color="@color/colorPrimary"
-        app:riv_border_width="1dp"
-        app:riv_oval="true" />
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+        app:strokeColor="@color/colorAccent"
+        app:strokeWidth="2dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
