--- a/app/src/main/res/layout/fragment_purchase_view.xml
+++ b/app/src/main/res/layout/fragment_purchase_view.xml
@@ -64,9 +64,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -95,9 +97,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:importantForAutofill="no"
+                    android:minHeight="48dp"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -126,9 +131,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:importantForAutofill="no"
+                    android:minHeight="48dp"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -157,9 +165,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -188,10 +198,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:gravity="top"
                     android:importantForAutofill="no"
+                    android:minHeight="48dp"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -221,9 +234,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -252,9 +267,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -284,10 +301,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
+                    android:contentDescription="@string/description"
                     android:gravity="top"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp" />
             </LinearLayout>
 
