--- a/app/src/main/res/layout/fragment_job_orders.xml
+++ b/app/src/main/res/layout/fragment_job_orders.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,14 +10,39 @@
     android:paddingTop="15dp"
     tools:context=".home.all_job_orders.JobOrdersFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="@string/all_job_orders"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="@string/all_job_orders"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/btn_reminder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/status_red"
+            android:drawablePadding="3dp"
+            android:gravity="center"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="5dp"
+            android:text="@string/ceo_reminder"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            app:drawableStartCompat="@drawable/ic_notification_list_item"
+            app:drawableTint="@color/white" />
+    </RelativeLayout>
 
 
     <RelativeLayout
@@ -35,9 +61,9 @@
             android:drawableTint="@color/black"
             android:hint="@string/type_to_search"
             android:imeOptions="actionSearch"
+            android:importantForAutofill="no"
             android:inputType="text"
             android:padding="8dp"
-            android:importantForAutofill="no"
             tools:ignore="RtlHardcoded" />
 
         <ImageView
@@ -48,9 +74,9 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="5dp"
             android:background="@drawable/black_curved"
+            android:contentDescription="@string/description"
             android:padding="10dp"
-            android:src="@drawable/ic_filter"
-            android:contentDescription="@string/description" />
+            android:src="@drawable/ic_filter" />
 
     </RelativeLayout>
 
