--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/filter_btn"
+            android:layout_toStartOf="@+id/notifications_no"
             android:background="@drawable/et_gray"
             android:drawableRight="@drawable/ic_search"
             android:drawableTint="@color/black"
@@ -46,24 +46,40 @@
             android:padding="8dp"
             tools:ignore="RtlHardcoded" />
 
-        <ImageView
-            android:id="@+id/filter_btn"
+        <Spinner
+            android:id="@+id/notifications_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:entries="@array/notifications_no"
             android:layout_marginStart="5dp"
-            android:background="@drawable/black_curved"
-            android:contentDescription="@string/description"
-            android:padding="10dp"
-            android:src="@drawable/ic_filter" />
+            android:theme="@style/blackSpinnerTheme"
+            android:visibility="gone"/>
+
     </RelativeLayout>
+
+    <com.adroitandroid.chipcloud.ChipCloud xmlns:chipcloud="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/status_chip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        chipcloud:allCaps="false"
+        chipcloud:deselectTransitionMS="200"
+        chipcloud:deselectedColor="@color/line_gray"
+        chipcloud:deselectedFontColor="@color/black"
+        chipcloud:minHorizontalSpacing="10dp"
+        chipcloud:selectMode="required"
+        chipcloud:selectTransitionMS="300"
+        chipcloud:selectedColor="@color/colorAccent"
+        chipcloud:selectedFontColor="@color/black"
+        chipcloud:textSize="16sp"
+        chipcloud:verticalSpacing="10dp" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/notifications_recycler"
