--- a/app/src/main/res/layout/bottom_sheet_suppliers.xml
+++ b/app/src/main/res/layout/bottom_sheet_suppliers.xml
@@ -73,6 +73,38 @@
 
         </RelativeLayout>
 
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/et_supplier_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="5dp"
+                android:layout_toStartOf="@+id/btn_submit"
+                android:background="@drawable/et_gray"
+                android:drawableTint="@color/black"
+                android:hint="@string/supplier_name"
+                android:inputType="text"
+                android:padding="8dp" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/submit"
+                android:background="@color/colorAccent"
+                android:backgroundTint="@color/colorAccent"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
+
+
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
