--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -86,6 +86,19 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_all_companies"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/et_gray"
+        android:baselineAligned="false"
+        android:text="@string/all_companies"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:visibility="gone"/>
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_change_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
