--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -449,19 +449,36 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btn_reminder"
+        android:id="@+id/btn_sales_reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_ceo_reminder"
         android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="@string/sales_reminder"
+        android:text="@string/sales_reminder"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:backgroundTint="@color/red"
+        app:icon="@drawable/ic_notification_list_item"
+        app:iconTint="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/btn_ceo_reminder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/btn_comments"
+        android:layout_alignParentEnd="true"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:contentDescription="@string/ceo_reminder"
         android:text="@string/ceo_reminder"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        app:backgroundTint="@color/red"
         android:visibility="gone"
+        app:backgroundTint="@color/red"
         app:icon="@drawable/ic_notification_list_item"
         app:iconTint="@color/white" />
 
