--- a/app/src/main/res/layout/fragment_job_orders.xml
+++ b/app/src/main/res/layout/fragment_job_orders.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,88 +10,104 @@
     android:paddingTop="15dp"
     tools:context=".home.all_job_orders.JobOrdersFragment">
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:text="@string/all_job_orders"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text="@string/all_job_orders"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/btn_reminder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/status_red"
-            android:drawablePadding="3dp"
-            android:gravity="center"
-            android:paddingStart="10dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="10dp"
-            android:paddingBottom="5dp"
-            android:text="@string/ceo_reminder"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            app:drawableStartCompat="@drawable/ic_notification_list_item"
-            app:drawableTint="@color/white" />
-    </RelativeLayout>
+        </RelativeLayout>
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <com.mindorks.editdrawabletext.EditDrawableText
-            android:id="@+id/search"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/filter_btn"
-            android:background="@drawable/et_gray"
-            android:drawableRight="@drawable/ic_search"
-            android:drawableTint="@color/black"
-            android:hint="@string/type_to_search"
-            android:imeOptions="actionSearch"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:padding="8dp"
-            tools:ignore="RtlHardcoded" />
+            android:layout_marginTop="10dp">
 
-        <ImageView
-            android:id="@+id/filter_btn"
+            <com.mindorks.editdrawabletext.EditDrawableText
+                android:id="@+id/search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/filter_btn"
+                android:background="@drawable/et_gray"
+                android:drawableRight="@drawable/ic_search"
+                android:drawableTint="@color/black"
+                android:hint="@string/type_to_search"
+                android:imeOptions="actionSearch"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:padding="8dp"
+                tools:ignore="RtlHardcoded" />
+
+            <ImageView
+                android:id="@+id/filter_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/black_curved"
+                android:contentDescription="@string/description"
+                android:padding="10dp"
+                android:src="@drawable/ic_filter" />
+
+        </RelativeLayout>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:background="@drawable/black_curved"
-            android:contentDescription="@string/description"
-            android:padding="10dp"
-            android:src="@drawable/ic_filter" />
+            android:layout_marginTop="10dp">
 
-    </RelativeLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_job_order" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </LinearLayout>
 
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh"
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/btn_sales_reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_above="@+id/btn_ceo_reminder"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="@string/sales_reminder"
+        android:text="@string/sales_reminder"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/red"
+        app:icon="@drawable/ic_notification_list_item"
+        app:iconTint="@color/white" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_job_order" />
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/btn_ceo_reminder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="@string/ceo_reminder"
+        android:text="@string/ceo_reminder"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/red"
+        app:icon="@drawable/ic_notification_list_item"
+        app:iconTint="@color/white" />
 
-</LinearLayout>
+</RelativeLayout>
