--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -341,12 +341,14 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/btn_proc_reminder"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:contentDescription="@string/sales_reminder"
         android:text="@string/sales_reminder"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:visibility="gone"
         app:backgroundTint="@color/red"
         app:icon="@drawable/ic_notification_list_item"
         app:iconTint="@color/white" />
@@ -363,6 +365,7 @@
         android:text="@string/procurement_reminder"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:visibility="gone"
         app:backgroundTint="@color/red"
         app:icon="@drawable/ic_notification_list_item"
         app:iconTint="@color/white" />
