--- a/app/src/main/res/layout/fragment_statistics_projects.xml
+++ b/app/src/main/res/layout/fragment_statistics_projects.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.statistics.Statistics_projects">
+    tools:context=".admin.statistics.projects.Statistics_projects">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
