--- a/app/src/main/res/layout/fragment_statistics_job_orders.xml
+++ b/app/src/main/res/layout/fragment_statistics_job_orders.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.statistics.Statistics_job_orders">
+    tools:context=".admin.statistics.job_orders.Statistics_job_orders">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
